WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229828
Gracefully recover from WebAuthnProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=229828
Summary
Gracefully recover from WebAuthnProcess crashes
Alex Christensen
Reported
2021-09-02 13:48:55 PDT
Gracefully recover from WebAuthnProcess crashes
Attachments
Patch
(8.10 KB, patch)
2021-09-02 13:51 PDT
,
Alex Christensen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.93 KB, patch)
2021-09-02 14:04 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-09-02 13:51:06 PDT
Created
attachment 437190
[details]
Patch
Chris Dumez
Comment 2
2021-09-02 13:57:09 PDT
Comment on
attachment 437190
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=437190&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKProcessPool.mm:205 > ++ (void)_terminateWebAuthnProcess
I think we should omit this and just call kill() in the API test.
Alex Christensen
Comment 3
2021-09-02 14:04:38 PDT
Created
attachment 437191
[details]
Patch
Chris Dumez
Comment 4
2021-09-02 14:08:09 PDT
Comment on
attachment 437191
[details]
Patch r=me assuming the bots are happy.
EWS
Comment 5
2021-09-02 16:25:25 PDT
Committed
r281965
(
241272@main
): <
https://commits.webkit.org/241272@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437191
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-09-02 16:26:20 PDT
<
rdar://problem/82698252
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug