Gracefully recover from WebAuthnProcess crashes https://bugs.webkit.org/show_bug.cgi?id=229828 Source/WebKit:

<rdar://82682650>

Patch by Alex Christensen <achristensen@webkit.org> on 2021-09-02
Reviewed by Chris Dumez.

When a WebAuthn process closes, it can't be connected with again, which causes persistent web process "crashes".
Let's start a new process when this happens instead.

* UIProcess/API/Cocoa/WKProcessPool.mm:
(+[WKProcessPool _webAuthnProcessIdentifier]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:
* UIProcess/WebAuthentication/WebAuthnProcessProxy.cpp:
(WebKit::sharedProcess):
(WebKit::WebAuthnProcessProxy::singleton):
(WebKit::WebAuthnProcessProxy::webAuthnProcessCrashed):

Tools:

Patch by Alex Christensen <achristensen@webkit.org> on 2021-09-02
Reviewed by Chris Dumez.

* TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/241272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281965 268f45cc-cd09-0410-ab3c-d52691b4dbfc